<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Go Refuel</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="title_activity_display_message">%1$s, %2$s</string>
    <string name="title_activity_map">Shops on map</string>
    <string name="title_activity_settings">Application settings</string>
    <string name="showOnMap">Show on map</string>

    <integer-array name="distance_options">
        <item>3</item>
        <item>10</item>
    </integer-array>

    <string name="less_than">Within %.1f kms</string>
    <string name="cheaper_than">Within %.1f &#x00A2;</string>
    <string name="show_all">Show all</string>
    <string name="info_group">The cheapest is %1$s &#x00A2; at %2$s</string>
    <string name="info_price">The nearest is %1$s in %2$.1f kms</string>
    <string name="tap_to_go">Tap to get directions</string>
    <string name="price">%.1f &#x00A2;</string>
    <string name="address">%1$s, %2$.1f kms</string>

    <string-array name="fuel_types">
        <item>Unleaded Petrol</item>
        <item>Premium Unleaded</item>
        <item>Diesel</item>
        <item>LPG</item>
        <item>98 RON</item>
        <item>B20 diesel</item>
    </string-array>
    <string-array name="fuel_types_values">
        <item>1</item>
        <item>2</item>       
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string name="fuel_types_default">1</string>
    <string name="fuel_type_dialog">What is your fuel type</string>
    <string name="fuel_type_title">Fuel type</string>
    <string name="tab_cheapest">By price</string>
    <string name="tab_nearest">By distance</string>
    <string name="tab_favorites">Favorites</string>
    <string name="tab_recommended">Recommended</string>
    <string name="nothing">No data found\nTry changing settings</string>
    <string name="no_favorites">Nothing here\nWhy not mark some stations?</string>
    <string name="error_network">Server can not be accessed\nTry again later</string>
    <string name="copyright">&#xa9; Konstantin Gunbin kgunbin@outlook.com\nFeel free to send your suggestions\n\nThe data is sourced from www.fuelwatch.wa.gov.au\n\nAll trademarks, servicemarks, registered trademarks, and registered servicemarks are the property of their respective owners.</string>
    <string name="about_dialog">About</string>
    <string name="try_again">Retry</string>
    
    <string name="consumption_dialog_message">What is your car\'s average consumption ,litres per 100 Km\nNote: this will take effect on application restart</string>
    <string name="consumption_dialog_title">Fuel consumption</string>
    <string name="consumption_dialog_summary">Average consumption</string>
    <string name="volume_dialog_message">How much fuel are you going to buy\nNote: this will take effect on application restart</string>
    <string name="volume_dialog_title">Refuel volume</string>
    <string name="volume_dialog_summary">Litres of fuel to buy</string>

</resources>