<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <au.kgunbin.gorefuel.fragments.EditTextPreference
        android:defaultValue="10"
        android:dialogMessage="@string/consumption_dialog_message"
        android:dialogTitle="@string/consumption_dialog_title"
        android:key="au.kgunbin.gorefuel.CONSUMPTION"
        android:numeric="integer"
        android:title="@string/consumption_dialog_summary" />
    <au.kgunbin.gorefuel.fragments.EditTextPreference
        android:defaultValue="40"
        android:dialogMessage="@string/volume_dialog_message"
        android:dialogTitle="@string/volume_dialog_title"
        android:key="au.kgunbin.gorefuel.VOLUME"
        android:numeric="integer"
        android:title="@string/volume_dialog_summary" />

</PreferenceScreen>